<resources>
    <string name="app_name">carerApp</string>
    <string name="hello_title">HELLO</string>
    <string name="help_button">HELP</string>
    <string name="what_is_this_button">WHAT IS THIS?</string>
    <string name="patient_name">PATIENT</string>
    <string name="carer_button">CARER</string>
    <string name="carer_name">CARER</string>
    <string name="patients_button">PATIENTS</string>
    <string name="research_data_button">RESEARCH DATA</string>
    <string name="welcome_title">WELCOME</string>
    <string name="which_are_you_header">WHICH ARE YOU?</string>
    <string name="ok_button">OK</string>
    <string name="patient_toggle">PATIENT</string>
    <string name="carer_toggle">CARER</string>
    <string name="this_is_title">THIS IS</string>
    <string name="carer_details_button">CARER DETAILS</string>
    <string name="user_name_header">USER NAME</string>
    <string name="default_id_box_value">PLEASE ENTER YOUR USER ID HERE</string>
    <string name="user_email_header">USER EMAIL</string>
    <string name="user_email_box">PLEASE ENTER YOUR EMAIL</string>
    <string name="my_ID_Button">MY ID</string>
    <string name="what_is_this_explaination_pt1">Welcome to the Carer App created by NTU PPM Group 2020</string>
    <string name="what_is_this_explaination_pt2">This app is designed to help keep a carer and patient connected remotely so that the carer can fulfil their role of keeping the patient safe and happy.</string>
    <string name="what_is_this_explaination_pt3">We will alert the connected carer if the patient presses the ‘HELP’ button on their home screen or if the app detects that the patient is lost.</string>
    <string name="what_is_this_explaination_pt4">To get started the patient should enter the User ID of the carer in the carer menu. To find your carers ID ask the carer to open the ‘my id’ option in the home menu.</string>
</resources>